--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "prettier": "^3.5.3",
+    "prettier-plugin-tailwindcss": "^0.6.12",
   }
 }
