--- a/package.json
+++ b/package.json
@@ -14,11 +14,15 @@
     "next": "15.3.3"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "clsx": "^2.1.1",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.12",
+    "tailwind-merge": "^3.3.0",
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
